Proyecto3/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mumnk8s
  labels:
    project: mumnk8s
