Proyecto3/k8s/base/apps.tmpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: mumnk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
        - name: rust-api
          image: ${ZOT_REGISTRY}/mumnk8s/rust-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rust-api
  namespace: mumnk8s
spec:
  selector:
    app: rust-api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ingest
  namespace: mumnk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-ingest
  template:
    metadata:
      labels:
        app: go-ingest
    spec:
      containers:
        - name: go-ingest
          image: ${ZOT_REGISTRY}/mumnk8s/go-ingest:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: go-ingest
  namespace: mumnk8s
spec:
  selector:
    app: go-ingest
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-writer
  namespace: mumnk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-writer
  template:
    metadata:
      labels:
        app: go-writer
    spec:
      containers:
        - name: go-writer
          image: ${ZOT_REGISTRY}/mumnk8s/go-writer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: go-writer
  namespace: mumnk8s
spec:
  selector:
    app: go-writer
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-consumer
  namespace: mumnk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-consumer
  template:
    metadata:
      labels:
        app: go-consumer
    spec:
      containers:
        - name: go-consumer
          image: ${ZOT_REGISTRY}/mumnk8s/go-consumer:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
