Proyecto3/k8s/base/gateway.tmpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mumnk8s-gateway
  namespace: mumnk8s
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mumnk8s-routes
  namespace: mumnk8s
spec:
  parentRefs:
    - name: mumnk8s-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grpc-202300353
      backendRefs:
        - name: rust-api
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /dapr-202300353
      backendRefs:
        - name: rust-api
          port: 8080
